--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 *.pyc
-src/stockfish_15.1_linux_x64_avx2/stockfish-ubuntu-20.04-x86-64-avx2
+src/stockfish_15.1_linux_x64_avx2/
+src/stockfish_15.1_linux_x64_avx2/Top CPU Contributors.txt
