--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,6 @@
     "python.testing.unittestEnabled": false,
     "python.testing.pytestEnabled": true,
     "CodeGPT.maxTokens": 4096,
-    "CodeGPT.model": "gpt-4",
+    "CodeGPT.model": "gpt-3.5-turbo",
     
 }
