--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,82 @@
 aiohttp==3.8.3
+aiosignal==1.3.1
+astroid==2.12.13
+async-timeout==4.0.2
+attrs==22.1.0
+autopep8==2.0.1
+bidict==0.22.0
+blinker==1.4
+certifi==2022.9.24
+charset-normalizer==2.1.1
 chess==1.9.3
-gevent_socketio==0.3.6
+click==8.1.3
+colorama==0.4.6
+command-not-found==0.3
+convertdate==2.4.0
+cryptography==3.4.8
+dbus-python==1.2.18
+dill==0.3.6
+distro==1.7.0
+distro-info===1.1build1
+docopt==0.6.2
+exceptiongroup==1.1.0
+frozenlist==1.3.3
+gTTS==2.3.1
+httplib2==0.20.2
+idna==3.4
+importlib-metadata==4.6.4
+iniconfig==2.0.0
+isort==5.11.4
+jeepney==0.7.1
+keyring==23.5.0
+launchpadlib==1.10.16
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
+lazy-object-proxy==1.9.0
+mccabe==0.7.0
+more-itertools==8.10.0
+multidict==6.0.2
+netifaces==0.11.0
+oauthlib==3.2.0
+openai==0.27.2
+packaging==23.0
+pipreqs==0.4.11
+platformdirs==2.6.2
+pluggy==1.0.0
 psycopg==3.1.7
+psycopg-binary==3.1.6
+psycopg2-binary==2.9.5
+pycodestyle==2.10.0
+pygame==2.1.2
+PyGObject==3.42.1
+PyJWT==2.3.0
+pylint==2.15.9
+pyluach==2.0.2
+PyMeeus==0.5.12
+pyparsing==2.4.7
+pytest==7.2.1
+python-apt==2.4.0+ubuntu1
+python-chess==1.999
+python-engineio==4.3.4
+python-socketio==5.7.2
+PyYAML==5.4.1
 requests==2.28.1
+SecretStorage==3.3.1
+six==1.16.0
 stockfish==3.28.0
+systemd-python==234
+tk==0.1.0
+tomli==2.0.1
+tomlkit==0.11.6
+tqdm==4.65.0
+typing_extensions==4.4.0
+tzdata==2022.7
+ubuntu-advantage-tools==8001
+ufw==0.36.1
+unattended-upgrades==0.1
+urllib3==1.26.13
+wadllib==1.3.6
+wrapt==1.14.1
+yarg==0.1.9
+yarl==1.8.1
+zipp==1.0.0
